--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,6 @@ body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	background: var(--light-color);
-	margin: 20px;
 	box-sizing: border-box;
 }
 
@@ -119,8 +118,8 @@ a {
 }
 
 .chat-messages {
-	padding: 30px;
-	height: 450px;
+	padding: 15px;
+	height: 514px;
 	overflow-y: scroll;
     background-image: url('./img/image4.jpg');
     background-position: center;
@@ -132,7 +131,7 @@ a {
 	margin-bottom: 15px;
 	background-color: var(--light-color);
 	border-radius: 5px;
-	display: inline-block;	
+	display: inline-block;
 }
 
 .chat-form-container {
@@ -261,6 +260,8 @@ i.fas.fa-paper-plane{
 
 	#myBtn{
 		margin-left: 3px;
+		padding-top: 4px;
+		padding-bottom: 4px;
 	}
 }
 
