--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,7 @@ body {
 	font-size: 16px;
 	background: var(--light-color);
 	box-sizing: border-box;
+	height: 100%;
 }
 
 ul {
@@ -119,7 +120,7 @@ a {
 
 .chat-messages {
 	padding: 15px;
-	height: 514px;
+	height: 78.5vh;
 	overflow-y: scroll;
     background-image: url('./img/image4.jpg');
     background-position: center;
