--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,8 +18,6 @@ body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	background: var(--light-color);
-	box-sizing: border-box;
-	height: 100%;
 }
 
 ul {
@@ -120,7 +118,7 @@ a {
 
 .chat-messages {
 	padding: 15px;
-	height: 78.5vh;
+	height: 514px;
 	overflow-y: scroll;
     background-image: url('./img/image4.jpg');
     background-position: center;
