--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,8 @@
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
-	background: var(--light-color);
+	/* background: var(--light-color); */
+	background-color: rgb(65, 63, 63);
 }
 
 ul {
